tests/compile_fail/shared_ptr_to_array.cpp
#include <throwing/shared_ptr.hpp>

int main() {
    int *p = new int[10];
    throwing::shared_ptr<int[]> sp(p);
    return *p = sp[0];
}
